# GamesAggrigate

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_launcher.bat  run_scraper.bat
electron/: categories.js  library.js  main.js  preload.js
electron/renderer/: app.js  index.html  styles.css
electron/scripts/: ensure-electron-binary.js  prepare-wincodesign.js
src/game_launcher_scraper/: __init__.py  catalog.py  cli.py  models.py  renderer.py  utils.py
src/game_launcher_scraper/launchers/: __init__.py  base.py  ea.py  epic.py  gog.py  steam.py  xbox.py
tests/: test_launchers.py  test_renderer.py
